// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the run conclusion file conversion converts a runConclusions file of a jest test suite to a testim execution 1`] = `
Object {
  "config": Object {
    "browser": "chrome",
    "browserTimeout": 300000,
    "canaryMode": false,
    "companyId": "dogs-that-lose-weight-are-healthier",
    "gitBranch": undefined,
    "gitCommit": undefined,
    "gitRepoUrl": undefined,
    "newBrowserWaitTimeout": 300000,
    "parallel": 1,
    "runnerMode": "n/a",
    "runnerVersion": "none(screenplay)",
    "sessionType": "screenplay",
    "source": "n/a",
    "testConfig": Object {},
    "testConfigIds": Array [],
    "testConfigs": Array [],
    "testIds": Array [],
    "testLabels": Array [],
    "testNames": Array [
      "Go to wikipedia and fail",
      "Test two",
      "Test one",
      "Wikipedia talk page test",
    ],
    "testPlans": Array [],
    "testimBranch": "master",
    "timeout": 300000,
    "tunnelPort": "80",
  },
  "endTime": 13,
  "execution": Object {
    "14": Object {
      "config": Object {
        "browser": "chrome",
        "browserTimeout": 300000,
        "canaryMode": false,
        "companyId": "dogs-that-lose-weight-are-healthier",
        "gitBranch": undefined,
        "gitCommit": undefined,
        "gitRepoUrl": undefined,
        "newBrowserWaitTimeout": 300000,
        "parallel": 1,
        "runnerMode": "n/a",
        "runnerVersion": "none(screenplay)",
        "sessionType": "screenplay",
        "source": "n/a",
        "testConfig": Object {},
        "testConfigIds": Array [],
        "testConfigs": Array [],
        "testIds": Array [],
        "testLabels": Array [],
        "testNames": Array [
          "Go to wikipedia and fail",
          "Test two",
          "Test one",
          "Wikipedia talk page test",
        ],
        "testPlans": Array [],
        "testimBranch": "master",
        "timeout": 300000,
        "tunnelPort": "80",
      },
      "endTime": 1594896454398,
      "isTestsContainer": false,
      "name": "Go to wikipedia and fail",
      "parentResultId": "18",
      "reason": "Error: No node found for selector: #none-exiting-element",
      "resultId": "14",
      "show": true,
      "startTime": 1594896454398,
      "status": "FINISHED",
      "success": false,
      "testId": "34428e5e621b9df3045a8e67e059f74d",
      "testRunOverrideStatus": "completed",
    },
    "15": Object {
      "config": Object {
        "browser": "chrome",
        "browserTimeout": 300000,
        "canaryMode": false,
        "companyId": "dogs-that-lose-weight-are-healthier",
        "gitBranch": undefined,
        "gitCommit": undefined,
        "gitRepoUrl": undefined,
        "newBrowserWaitTimeout": 300000,
        "parallel": 1,
        "runnerMode": "n/a",
        "runnerVersion": "none(screenplay)",
        "sessionType": "screenplay",
        "source": "n/a",
        "testConfig": Object {},
        "testConfigIds": Array [],
        "testConfigs": Array [],
        "testIds": Array [],
        "testLabels": Array [],
        "testNames": Array [
          "Go to wikipedia and fail",
          "Test two",
          "Test one",
          "Wikipedia talk page test",
        ],
        "testPlans": Array [],
        "testimBranch": "master",
        "timeout": 300000,
        "tunnelPort": "80",
      },
      "endTime": 1594896454398,
      "isTestsContainer": false,
      "name": "Test two",
      "parentResultId": "19",
      "reason": undefined,
      "resultId": "15",
      "show": true,
      "startTime": 1594896454398,
      "status": "FINISHED",
      "success": true,
      "testId": "413b3012dacaf41a19d96fb54a5a4807",
      "testRunOverrideStatus": "completed",
    },
    "16": Object {
      "config": Object {
        "browser": "chrome",
        "browserTimeout": 300000,
        "canaryMode": false,
        "companyId": "dogs-that-lose-weight-are-healthier",
        "gitBranch": undefined,
        "gitCommit": undefined,
        "gitRepoUrl": undefined,
        "newBrowserWaitTimeout": 300000,
        "parallel": 1,
        "runnerMode": "n/a",
        "runnerVersion": "none(screenplay)",
        "sessionType": "screenplay",
        "source": "n/a",
        "testConfig": Object {},
        "testConfigIds": Array [],
        "testConfigs": Array [],
        "testIds": Array [],
        "testLabels": Array [],
        "testNames": Array [
          "Go to wikipedia and fail",
          "Test two",
          "Test one",
          "Wikipedia talk page test",
        ],
        "testPlans": Array [],
        "testimBranch": "master",
        "timeout": 300000,
        "tunnelPort": "80",
      },
      "endTime": 1594896454398,
      "isTestsContainer": false,
      "name": "Test one",
      "parentResultId": "20",
      "reason": undefined,
      "resultId": "16",
      "show": true,
      "startTime": 1594896454398,
      "status": "FINISHED",
      "success": true,
      "testId": "433d29e23e0c0fcf4fce51e6bc612a74",
      "testRunOverrideStatus": "completed",
    },
    "17": Object {
      "config": Object {
        "browser": "chrome",
        "browserTimeout": 300000,
        "canaryMode": false,
        "companyId": "dogs-that-lose-weight-are-healthier",
        "gitBranch": undefined,
        "gitCommit": undefined,
        "gitRepoUrl": undefined,
        "newBrowserWaitTimeout": 300000,
        "parallel": 1,
        "runnerMode": "n/a",
        "runnerVersion": "none(screenplay)",
        "sessionType": "screenplay",
        "source": "n/a",
        "testConfig": Object {},
        "testConfigIds": Array [],
        "testConfigs": Array [],
        "testIds": Array [],
        "testLabels": Array [],
        "testNames": Array [
          "Go to wikipedia and fail",
          "Test two",
          "Test one",
          "Wikipedia talk page test",
        ],
        "testPlans": Array [],
        "testimBranch": "master",
        "timeout": 300000,
        "tunnelPort": "80",
      },
      "endTime": 1594896454398,
      "isTestsContainer": false,
      "name": "Wikipedia talk page test",
      "parentResultId": "18",
      "reason": undefined,
      "resultId": "17",
      "show": true,
      "startTime": 1594896454398,
      "status": "FINISHED",
      "success": true,
      "testId": "7eac42e9892b9cd477508b4207c8fe6e",
      "testRunOverrideStatus": "completed",
    },
    "18": Object {
      "childTestResultIds": Array [
        "14",
        "17",
      ],
      "config": Object {
        "browser": "chrome",
        "browserTimeout": 300000,
        "canaryMode": false,
        "companyId": "dogs-that-lose-weight-are-healthier",
        "gitBranch": undefined,
        "gitCommit": undefined,
        "gitRepoUrl": undefined,
        "newBrowserWaitTimeout": 300000,
        "parallel": 1,
        "runnerMode": "n/a",
        "runnerVersion": "none(screenplay)",
        "sessionType": "screenplay",
        "source": "n/a",
        "testConfig": Object {},
        "testConfigIds": Array [],
        "testConfigs": Array [],
        "testIds": Array [],
        "testLabels": Array [],
        "testNames": Array [
          "Go to wikipedia and fail",
          "Test two",
          "Test one",
          "Wikipedia talk page test",
        ],
        "testPlans": Array [],
        "testimBranch": "master",
        "timeout": 300000,
        "tunnelPort": "80",
      },
      "endTime": NaN,
      "isTestsContainer": true,
      "name": "with-jest-puppeteer/example1.test.ts",
      "resultId": "18",
      "show": false,
      "startTime": 1594896454398,
      "status": "FINISHED",
      "success": false,
      "testId": "2b9ed60396f8b12a9d446fa310ae94b1",
      "testRunOverrideStatus": "completed",
    },
    "19": Object {
      "childTestResultIds": Array [
        "15",
      ],
      "config": Object {
        "browser": "chrome",
        "browserTimeout": 300000,
        "canaryMode": false,
        "companyId": "dogs-that-lose-weight-are-healthier",
        "gitBranch": undefined,
        "gitCommit": undefined,
        "gitRepoUrl": undefined,
        "newBrowserWaitTimeout": 300000,
        "parallel": 1,
        "runnerMode": "n/a",
        "runnerVersion": "none(screenplay)",
        "sessionType": "screenplay",
        "source": "n/a",
        "testConfig": Object {},
        "testConfigIds": Array [],
        "testConfigs": Array [],
        "testIds": Array [],
        "testLabels": Array [],
        "testNames": Array [
          "Go to wikipedia and fail",
          "Test two",
          "Test one",
          "Wikipedia talk page test",
        ],
        "testPlans": Array [],
        "testimBranch": "master",
        "timeout": 300000,
        "tunnelPort": "80",
      },
      "endTime": NaN,
      "isTestsContainer": true,
      "name": "with-playwright-manual-integration/click-click-reset-file-1.test.ts",
      "resultId": "19",
      "show": false,
      "startTime": 1594896454398,
      "status": "FINISHED",
      "success": true,
      "testId": "eda2974f06c58ea2477f5f11e44a3977",
      "testRunOverrideStatus": "completed",
    },
    "20": Object {
      "childTestResultIds": Array [
        "16",
      ],
      "config": Object {
        "browser": "chrome",
        "browserTimeout": 300000,
        "canaryMode": false,
        "companyId": "dogs-that-lose-weight-are-healthier",
        "gitBranch": undefined,
        "gitCommit": undefined,
        "gitRepoUrl": undefined,
        "newBrowserWaitTimeout": 300000,
        "parallel": 1,
        "runnerMode": "n/a",
        "runnerVersion": "none(screenplay)",
        "sessionType": "screenplay",
        "source": "n/a",
        "testConfig": Object {},
        "testConfigIds": Array [],
        "testConfigs": Array [],
        "testIds": Array [],
        "testLabels": Array [],
        "testNames": Array [
          "Go to wikipedia and fail",
          "Test two",
          "Test one",
          "Wikipedia talk page test",
        ],
        "testPlans": Array [],
        "testimBranch": "master",
        "timeout": 300000,
        "tunnelPort": "80",
      },
      "endTime": NaN,
      "isTestsContainer": true,
      "name": "with-playwright-manual-integration/click-click-reset-file-yellow.test.ts",
      "resultId": "20",
      "show": false,
      "startTime": 1594896454398,
      "status": "FINISHED",
      "success": true,
      "testId": "373959305eede8ae64ac0e45682ba6de",
      "testRunOverrideStatus": "completed",
    },
  },
  "labels": "Testim Screenplay Run 0/0/0",
  "metadata": Object {},
  "projectId": "ilan-loves-loacker-more-than-life-itself",
  "remoteRunId": "",
  "resultLabels": Array [
    "screenplay",
  ],
  "runId": "159489645314912",
  "show": true,
  "startTime": 1594896454398,
  "status": "FINISHED",
}
`;

exports[`the run conclusion file conversion converts a runConclusions file of a jest test suite to a testim execution with git metadata 1`] = `
Object {
  "config": Object {
    "browser": "chrome",
    "browserTimeout": 300000,
    "canaryMode": false,
    "companyId": "dogs-that-lose-weight-are-healthier",
    "gitBranch": "main",
    "gitCommit": "3123364",
    "gitRepoUrl": "#doglivesmatter#ingoldawetrust",
    "newBrowserWaitTimeout": 300000,
    "parallel": 1,
    "runnerMode": "n/a",
    "runnerVersion": "none(screenplay)",
    "sessionType": "screenplay",
    "source": "n/a",
    "testConfig": Object {},
    "testConfigIds": Array [],
    "testConfigs": Array [],
    "testIds": Array [],
    "testLabels": Array [],
    "testNames": Array [
      "Go to wikipedia and fail",
      "Test two",
      "Test one",
      "Wikipedia talk page test",
    ],
    "testPlans": Array [],
    "testimBranch": "master",
    "timeout": 300000,
    "tunnelPort": "80",
  },
  "endTime": 22,
  "execution": Object {
    "23": Object {
      "config": Object {
        "browser": "chrome",
        "browserTimeout": 300000,
        "canaryMode": false,
        "companyId": "dogs-that-lose-weight-are-healthier",
        "gitBranch": "main",
        "gitCommit": "3123364",
        "gitRepoUrl": "#doglivesmatter#ingoldawetrust",
        "newBrowserWaitTimeout": 300000,
        "parallel": 1,
        "runnerMode": "n/a",
        "runnerVersion": "none(screenplay)",
        "sessionType": "screenplay",
        "source": "n/a",
        "testConfig": Object {},
        "testConfigIds": Array [],
        "testConfigs": Array [],
        "testIds": Array [],
        "testLabels": Array [],
        "testNames": Array [
          "Go to wikipedia and fail",
          "Test two",
          "Test one",
          "Wikipedia talk page test",
        ],
        "testPlans": Array [],
        "testimBranch": "master",
        "timeout": 300000,
        "tunnelPort": "80",
      },
      "endTime": 1594896454398,
      "isTestsContainer": false,
      "name": "Go to wikipedia and fail",
      "parentResultId": "27",
      "reason": "Error: No node found for selector: #none-exiting-element",
      "resultId": "23",
      "show": true,
      "startTime": 1594896454398,
      "status": "FINISHED",
      "success": false,
      "testId": "34428e5e621b9df3045a8e67e059f74d",
      "testRunOverrideStatus": "completed",
    },
    "24": Object {
      "config": Object {
        "browser": "chrome",
        "browserTimeout": 300000,
        "canaryMode": false,
        "companyId": "dogs-that-lose-weight-are-healthier",
        "gitBranch": "main",
        "gitCommit": "3123364",
        "gitRepoUrl": "#doglivesmatter#ingoldawetrust",
        "newBrowserWaitTimeout": 300000,
        "parallel": 1,
        "runnerMode": "n/a",
        "runnerVersion": "none(screenplay)",
        "sessionType": "screenplay",
        "source": "n/a",
        "testConfig": Object {},
        "testConfigIds": Array [],
        "testConfigs": Array [],
        "testIds": Array [],
        "testLabels": Array [],
        "testNames": Array [
          "Go to wikipedia and fail",
          "Test two",
          "Test one",
          "Wikipedia talk page test",
        ],
        "testPlans": Array [],
        "testimBranch": "master",
        "timeout": 300000,
        "tunnelPort": "80",
      },
      "endTime": 1594896454398,
      "isTestsContainer": false,
      "name": "Test two",
      "parentResultId": "28",
      "reason": undefined,
      "resultId": "24",
      "show": true,
      "startTime": 1594896454398,
      "status": "FINISHED",
      "success": true,
      "testId": "413b3012dacaf41a19d96fb54a5a4807",
      "testRunOverrideStatus": "completed",
    },
    "25": Object {
      "config": Object {
        "browser": "chrome",
        "browserTimeout": 300000,
        "canaryMode": false,
        "companyId": "dogs-that-lose-weight-are-healthier",
        "gitBranch": "main",
        "gitCommit": "3123364",
        "gitRepoUrl": "#doglivesmatter#ingoldawetrust",
        "newBrowserWaitTimeout": 300000,
        "parallel": 1,
        "runnerMode": "n/a",
        "runnerVersion": "none(screenplay)",
        "sessionType": "screenplay",
        "source": "n/a",
        "testConfig": Object {},
        "testConfigIds": Array [],
        "testConfigs": Array [],
        "testIds": Array [],
        "testLabels": Array [],
        "testNames": Array [
          "Go to wikipedia and fail",
          "Test two",
          "Test one",
          "Wikipedia talk page test",
        ],
        "testPlans": Array [],
        "testimBranch": "master",
        "timeout": 300000,
        "tunnelPort": "80",
      },
      "endTime": 1594896454398,
      "isTestsContainer": false,
      "name": "Test one",
      "parentResultId": "29",
      "reason": undefined,
      "resultId": "25",
      "show": true,
      "startTime": 1594896454398,
      "status": "FINISHED",
      "success": true,
      "testId": "433d29e23e0c0fcf4fce51e6bc612a74",
      "testRunOverrideStatus": "completed",
    },
    "26": Object {
      "config": Object {
        "browser": "chrome",
        "browserTimeout": 300000,
        "canaryMode": false,
        "companyId": "dogs-that-lose-weight-are-healthier",
        "gitBranch": "main",
        "gitCommit": "3123364",
        "gitRepoUrl": "#doglivesmatter#ingoldawetrust",
        "newBrowserWaitTimeout": 300000,
        "parallel": 1,
        "runnerMode": "n/a",
        "runnerVersion": "none(screenplay)",
        "sessionType": "screenplay",
        "source": "n/a",
        "testConfig": Object {},
        "testConfigIds": Array [],
        "testConfigs": Array [],
        "testIds": Array [],
        "testLabels": Array [],
        "testNames": Array [
          "Go to wikipedia and fail",
          "Test two",
          "Test one",
          "Wikipedia talk page test",
        ],
        "testPlans": Array [],
        "testimBranch": "master",
        "timeout": 300000,
        "tunnelPort": "80",
      },
      "endTime": 1594896454398,
      "isTestsContainer": false,
      "name": "Wikipedia talk page test",
      "parentResultId": "27",
      "reason": undefined,
      "resultId": "26",
      "show": true,
      "startTime": 1594896454398,
      "status": "FINISHED",
      "success": true,
      "testId": "7eac42e9892b9cd477508b4207c8fe6e",
      "testRunOverrideStatus": "completed",
    },
    "27": Object {
      "childTestResultIds": Array [
        "23",
        "26",
      ],
      "config": Object {
        "browser": "chrome",
        "browserTimeout": 300000,
        "canaryMode": false,
        "companyId": "dogs-that-lose-weight-are-healthier",
        "gitBranch": undefined,
        "gitCommit": undefined,
        "gitRepoUrl": undefined,
        "newBrowserWaitTimeout": 300000,
        "parallel": 1,
        "runnerMode": "n/a",
        "runnerVersion": "none(screenplay)",
        "sessionType": "screenplay",
        "source": "n/a",
        "testConfig": Object {},
        "testConfigIds": Array [],
        "testConfigs": Array [],
        "testIds": Array [],
        "testLabels": Array [],
        "testNames": Array [
          "Go to wikipedia and fail",
          "Test two",
          "Test one",
          "Wikipedia talk page test",
        ],
        "testPlans": Array [],
        "testimBranch": "master",
        "timeout": 300000,
        "tunnelPort": "80",
      },
      "endTime": NaN,
      "isTestsContainer": true,
      "name": "with-jest-puppeteer/example1.test.ts",
      "resultId": "27",
      "show": false,
      "startTime": 1594896454398,
      "status": "FINISHED",
      "success": false,
      "testId": "2b9ed60396f8b12a9d446fa310ae94b1",
      "testRunOverrideStatus": "completed",
    },
    "28": Object {
      "childTestResultIds": Array [
        "24",
      ],
      "config": Object {
        "browser": "chrome",
        "browserTimeout": 300000,
        "canaryMode": false,
        "companyId": "dogs-that-lose-weight-are-healthier",
        "gitBranch": undefined,
        "gitCommit": undefined,
        "gitRepoUrl": undefined,
        "newBrowserWaitTimeout": 300000,
        "parallel": 1,
        "runnerMode": "n/a",
        "runnerVersion": "none(screenplay)",
        "sessionType": "screenplay",
        "source": "n/a",
        "testConfig": Object {},
        "testConfigIds": Array [],
        "testConfigs": Array [],
        "testIds": Array [],
        "testLabels": Array [],
        "testNames": Array [
          "Go to wikipedia and fail",
          "Test two",
          "Test one",
          "Wikipedia talk page test",
        ],
        "testPlans": Array [],
        "testimBranch": "master",
        "timeout": 300000,
        "tunnelPort": "80",
      },
      "endTime": NaN,
      "isTestsContainer": true,
      "name": "with-playwright-manual-integration/click-click-reset-file-1.test.ts",
      "resultId": "28",
      "show": false,
      "startTime": 1594896454398,
      "status": "FINISHED",
      "success": true,
      "testId": "eda2974f06c58ea2477f5f11e44a3977",
      "testRunOverrideStatus": "completed",
    },
    "29": Object {
      "childTestResultIds": Array [
        "25",
      ],
      "config": Object {
        "browser": "chrome",
        "browserTimeout": 300000,
        "canaryMode": false,
        "companyId": "dogs-that-lose-weight-are-healthier",
        "gitBranch": undefined,
        "gitCommit": undefined,
        "gitRepoUrl": undefined,
        "newBrowserWaitTimeout": 300000,
        "parallel": 1,
        "runnerMode": "n/a",
        "runnerVersion": "none(screenplay)",
        "sessionType": "screenplay",
        "source": "n/a",
        "testConfig": Object {},
        "testConfigIds": Array [],
        "testConfigs": Array [],
        "testIds": Array [],
        "testLabels": Array [],
        "testNames": Array [
          "Go to wikipedia and fail",
          "Test two",
          "Test one",
          "Wikipedia talk page test",
        ],
        "testPlans": Array [],
        "testimBranch": "master",
        "timeout": 300000,
        "tunnelPort": "80",
      },
      "endTime": NaN,
      "isTestsContainer": true,
      "name": "with-playwright-manual-integration/click-click-reset-file-yellow.test.ts",
      "resultId": "29",
      "show": false,
      "startTime": 1594896454398,
      "status": "FINISHED",
      "success": true,
      "testId": "373959305eede8ae64ac0e45682ba6de",
      "testRunOverrideStatus": "completed",
    },
  },
  "labels": "Testim Screenplay Run 0/0/0",
  "metadata": Object {},
  "projectId": "ilan-loves-loacker-more-than-life-itself",
  "remoteRunId": "",
  "resultLabels": Array [
    "screenplay",
  ],
  "runId": "159489645314921",
  "show": true,
  "startTime": 1594896454398,
  "status": "FINISHED",
}
`;

exports[`the run conclusion file conversion converts a runConclusions file of several test to a testim execution 1`] = `
Object {
  "config": Object {
    "browser": "chrome",
    "browserTimeout": 300000,
    "canaryMode": false,
    "companyId": "dogs-that-lose-weight-are-healthier",
    "gitBranch": undefined,
    "gitCommit": undefined,
    "gitRepoUrl": undefined,
    "newBrowserWaitTimeout": 300000,
    "parallel": 1,
    "runnerMode": "n/a",
    "runnerVersion": "none(screenplay)",
    "sessionType": "screenplay",
    "source": "n/a",
    "testConfig": Object {},
    "testConfigIds": Array [],
    "testConfigs": Array [],
    "testIds": Array [],
    "testLabels": Array [],
    "testNames": Array [
      "test name",
      "other name (success)",
    ],
    "testPlans": Array [],
    "testimBranch": "master",
    "timeout": 300000,
    "tunnelPort": "80",
  },
  "endTime": 5,
  "execution": Object {
    "6": Object {
      "config": Object {
        "browser": "chrome",
        "browserTimeout": 300000,
        "canaryMode": false,
        "companyId": "dogs-that-lose-weight-are-healthier",
        "gitBranch": undefined,
        "gitCommit": undefined,
        "gitRepoUrl": undefined,
        "newBrowserWaitTimeout": 300000,
        "parallel": 1,
        "runnerMode": "n/a",
        "runnerVersion": "none(screenplay)",
        "sessionType": "screenplay",
        "source": "n/a",
        "testConfig": Object {},
        "testConfigIds": Array [],
        "testConfigs": Array [],
        "testIds": Array [],
        "testLabels": Array [],
        "testNames": Array [
          "test name",
          "other name (success)",
        ],
        "testPlans": Array [],
        "testimBranch": "master",
        "timeout": 300000,
        "tunnelPort": "80",
      },
      "endTime": 1592823688573,
      "isTestsContainer": false,
      "name": "test name",
      "reason": undefined,
      "resultId": "6",
      "show": true,
      "startTime": 1592823688573,
      "status": "FINISHED",
      "success": false,
      "testId": "6cd724f6d8c2ec01b4aa56f98b635ec6",
      "testRunOverrideStatus": "completed",
    },
    "7": Object {
      "config": Object {
        "browser": "chrome",
        "browserTimeout": 300000,
        "canaryMode": false,
        "companyId": "dogs-that-lose-weight-are-healthier",
        "gitBranch": undefined,
        "gitCommit": undefined,
        "gitRepoUrl": undefined,
        "newBrowserWaitTimeout": 300000,
        "parallel": 1,
        "runnerMode": "n/a",
        "runnerVersion": "none(screenplay)",
        "sessionType": "screenplay",
        "source": "n/a",
        "testConfig": Object {},
        "testConfigIds": Array [],
        "testConfigs": Array [],
        "testIds": Array [],
        "testLabels": Array [],
        "testNames": Array [
          "test name",
          "other name (success)",
        ],
        "testPlans": Array [],
        "testimBranch": "master",
        "timeout": 300000,
        "tunnelPort": "80",
      },
      "endTime": 1592823688573,
      "isTestsContainer": false,
      "name": "other name (success)",
      "reason": undefined,
      "resultId": "7",
      "show": true,
      "startTime": 1592823688573,
      "status": "FINISHED",
      "success": true,
      "testId": "6cd724f6d8c2ec01b4aa56f98b635ec7",
      "testRunOverrideStatus": "completed",
    },
  },
  "labels": "Testim Screenplay Run 0/0/0",
  "metadata": Object {},
  "projectId": "ilan-loves-loacker-more-than-life-itself",
  "remoteRunId": "",
  "resultLabels": Array [
    "screenplay",
  ],
  "runId": "no_run_id4",
  "show": true,
  "startTime": 1592823688573,
  "status": "FINISHED",
}
`;

exports[`the run conclusion file conversion converts a runConclusions file of several test to a testim execution 2`] = `
Object {
  "config": Object {
    "browser": "chrome",
    "browserTimeout": 300000,
    "canaryMode": false,
    "companyId": "dogs-that-lose-weight-are-healthier",
    "gitBranch": undefined,
    "gitCommit": undefined,
    "gitRepoUrl": undefined,
    "newBrowserWaitTimeout": 300000,
    "parallel": 1,
    "runnerMode": "n/a",
    "runnerVersion": "none(screenplay)",
    "sessionType": "screenplay",
    "source": "n/a",
    "testConfig": Object {},
    "testConfigIds": Array [],
    "testConfigs": Array [],
    "testIds": Array [],
    "testLabels": Array [],
    "testNames": Array [
      "test name",
      "other name",
    ],
    "testPlans": Array [],
    "testimBranch": "master",
    "timeout": 300000,
    "tunnelPort": "80",
  },
  "endTime": 9,
  "execution": Object {
    "10": Object {
      "config": Object {
        "browser": "chrome",
        "browserTimeout": 300000,
        "canaryMode": false,
        "companyId": "dogs-that-lose-weight-are-healthier",
        "gitBranch": undefined,
        "gitCommit": undefined,
        "gitRepoUrl": undefined,
        "newBrowserWaitTimeout": 300000,
        "parallel": 1,
        "runnerMode": "n/a",
        "runnerVersion": "none(screenplay)",
        "sessionType": "screenplay",
        "source": "n/a",
        "testConfig": Object {},
        "testConfigIds": Array [],
        "testConfigs": Array [],
        "testIds": Array [],
        "testLabels": Array [],
        "testNames": Array [
          "test name",
          "other name",
        ],
        "testPlans": Array [],
        "testimBranch": "master",
        "timeout": 300000,
        "tunnelPort": "80",
      },
      "endTime": 1592823688574,
      "isTestsContainer": false,
      "name": "test name",
      "reason": undefined,
      "resultId": "10",
      "show": true,
      "startTime": 1592823688574,
      "status": "FINISHED",
      "success": true,
      "testId": "6cd724f6d8c2ec01b4aa56f98b635ec6",
      "testRunOverrideStatus": "completed",
    },
    "11": Object {
      "config": Object {
        "browser": "chrome",
        "browserTimeout": 300000,
        "canaryMode": false,
        "companyId": "dogs-that-lose-weight-are-healthier",
        "gitBranch": undefined,
        "gitCommit": undefined,
        "gitRepoUrl": undefined,
        "newBrowserWaitTimeout": 300000,
        "parallel": 1,
        "runnerMode": "n/a",
        "runnerVersion": "none(screenplay)",
        "sessionType": "screenplay",
        "source": "n/a",
        "testConfig": Object {},
        "testConfigIds": Array [],
        "testConfigs": Array [],
        "testIds": Array [],
        "testLabels": Array [],
        "testNames": Array [
          "test name",
          "other name",
        ],
        "testPlans": Array [],
        "testimBranch": "master",
        "timeout": 300000,
        "tunnelPort": "80",
      },
      "endTime": 1592823688574,
      "isTestsContainer": false,
      "name": "other name",
      "reason": undefined,
      "resultId": "11",
      "show": true,
      "startTime": 1592823688574,
      "status": "FINISHED",
      "success": true,
      "testId": "6cd724f6d8c2ec01b4aa56f98b635ec7",
      "testRunOverrideStatus": "completed",
    },
  },
  "labels": "Testim Screenplay Run 0/0/0",
  "metadata": Object {},
  "projectId": "ilan-loves-loacker-more-than-life-itself",
  "remoteRunId": "",
  "resultLabels": Array [
    "screenplay",
  ],
  "runId": "no_run_id8",
  "show": true,
  "startTime": 1592823688574,
  "status": "FINISHED",
}
`;

exports[`the run conclusion file conversion converts an empty runConclusions file to a testim execution 1`] = `
Object {
  "config": Object {
    "browser": "chrome",
    "browserTimeout": 300000,
    "canaryMode": false,
    "companyId": "dogs-that-lose-weight-are-healthier",
    "gitBranch": undefined,
    "gitCommit": undefined,
    "gitRepoUrl": undefined,
    "newBrowserWaitTimeout": 300000,
    "parallel": 1,
    "runnerMode": "n/a",
    "runnerVersion": "none(screenplay)",
    "sessionType": "screenplay",
    "source": "n/a",
    "testConfig": Object {},
    "testConfigIds": Array [],
    "testConfigs": Array [],
    "testIds": Array [],
    "testLabels": Array [],
    "testNames": Array [
      "test name",
      "other name (success)",
    ],
    "testPlans": Array [],
    "testimBranch": "master",
    "timeout": 300000,
    "tunnelPort": "80",
  },
  "endTime": 1,
  "execution": Object {
    "2": Object {
      "config": Object {
        "browser": "chrome",
        "browserTimeout": 300000,
        "canaryMode": false,
        "companyId": "dogs-that-lose-weight-are-healthier",
        "gitBranch": undefined,
        "gitCommit": undefined,
        "gitRepoUrl": undefined,
        "newBrowserWaitTimeout": 300000,
        "parallel": 1,
        "runnerMode": "n/a",
        "runnerVersion": "none(screenplay)",
        "sessionType": "screenplay",
        "source": "n/a",
        "testConfig": Object {},
        "testConfigIds": Array [],
        "testConfigs": Array [],
        "testIds": Array [],
        "testLabels": Array [],
        "testNames": Array [
          "test name",
          "other name (success)",
        ],
        "testPlans": Array [],
        "testimBranch": "master",
        "timeout": 300000,
        "tunnelPort": "80",
      },
      "endTime": 1592823688573,
      "isTestsContainer": false,
      "name": "test name",
      "reason": undefined,
      "resultId": "2",
      "show": true,
      "startTime": 1592823688573,
      "status": "FINISHED",
      "success": false,
      "testId": "6cd724f6d8c2ec01b4aa56f98b635ec6",
      "testRunOverrideStatus": "completed",
    },
    "3": Object {
      "config": Object {
        "browser": "chrome",
        "browserTimeout": 300000,
        "canaryMode": false,
        "companyId": "dogs-that-lose-weight-are-healthier",
        "gitBranch": undefined,
        "gitCommit": undefined,
        "gitRepoUrl": undefined,
        "newBrowserWaitTimeout": 300000,
        "parallel": 1,
        "runnerMode": "n/a",
        "runnerVersion": "none(screenplay)",
        "sessionType": "screenplay",
        "source": "n/a",
        "testConfig": Object {},
        "testConfigIds": Array [],
        "testConfigs": Array [],
        "testIds": Array [],
        "testLabels": Array [],
        "testNames": Array [
          "test name",
          "other name (success)",
        ],
        "testPlans": Array [],
        "testimBranch": "master",
        "timeout": 300000,
        "tunnelPort": "80",
      },
      "endTime": 1592823688573,
      "isTestsContainer": false,
      "name": "other name (success)",
      "reason": undefined,
      "resultId": "3",
      "show": true,
      "startTime": 1592823688573,
      "status": "FINISHED",
      "success": true,
      "testId": "6cd724f6d8c2ec01b4aa56f98b635ec7",
      "testRunOverrideStatus": "completed",
    },
  },
  "labels": "Testim Screenplay Run 0/0/0",
  "metadata": Object {},
  "projectId": "ilan-loves-loacker-more-than-life-itself",
  "remoteRunId": "",
  "resultLabels": Array [
    "screenplay",
  ],
  "runId": "no_run_id0",
  "show": true,
  "startTime": 1592823688573,
  "status": "FINISHED",
}
`;
